feat: use released containers; fix k8s demo
Simplifies the kubernetes-batch-demo by using official released images
from GHCR instead of building from source locally.

Only the Python component server still requires local building.

This closes #354.

Changes:
- Update stepflow-server deployment to use ghcr.io/stepflow-ai/stepflow/stepflow-server:debian-0.6.0
- Update load-balancer deployment to use ghcr.io/stepflow-ai/stepflow/stepflow-load-balancer:alpine-0.6.0
- Remove build-stepflow-server.sh and build-load-balancer.sh scripts
- Update deploy-all.sh to skip building released images
- Update README.md with new deployment time (~5 min vs ~15 min)
- Add --config argument to stepflow server to load ConfigMap
- Update README to reflect Alpine images for both server and load-balancer

fix: Return non-zero exit code when submitted job fails

--- a/examples/kubernetes-batch-demo/k8s/load-balancer/deployment.yaml
+++ b/examples/kubernetes-batch-demo/k8s/load-balancer/deployment.yaml
@@ -19,8 +19,8 @@ spec:
     spec:
       containers:
       - name: load-balancer
-        image: localhost:5000/stepflow-load-balancer:latest
-        imagePullPolicy: Always
+        image: ghcr.io/stepflow-ai/stepflow/stepflow-load-balancer:alpine-0.6.0
+        imagePullPolicy: IfNotPresent
         ports:
         - name: http
           containerPort: 8080
