--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -22,8 +22,12 @@ dashmap = "6.1"
 dynosaur = "0.2.0"
 erased-serde = "0.4.6"
 error-stack = { version = "0.5.0", features = ["serde"] }
+fastrace = { version = "0.7", features = ["enable"] }
+fastrace-opentelemetry = "0.7"
 futures = "0.3.31"
 glob = "0.3"
+log = "0.4"
+logforth = { version = "0.28", features = ["layout-json", "layout-text", "bridge-log", "diagnostic-fastrace", "append-file"] }
 matchit = "0.8.4"
 hex = "0.4"
 indexmap = { version = "2.8.0", features = ["serde"] }
@@ -32,6 +36,11 @@ insta-cmd = "0.6.0"
 itertools = "0.14"
 nix = { version = "0.29", features = ["process", "signal"] }
 openai-api-rs = { version = "6.0.6", features = ["rustls"], default-features = false }
+opentelemetry = { version = "0.26", features = ["trace", "logs"] }
+opentelemetry-otlp = { version = "0.26", features = ["trace", "logs"] }
+opentelemetry_sdk = { version = "0.26", features = ["rt-tokio", "trace", "logs"] }
+opentelemetry-appender-log = "0.26"
+opentelemetry-semantic-conventions = "0.26"
 pingora = { version = "0.6", features = ["proxy"] }
 pingora-core = "0.6"
 pingora-http = "0.6"
@@ -60,6 +69,7 @@ stepflow-config = { path = "./crates/stepflow-config" }
 stepflow-core = { path = "./crates/stepflow-core" }
 stepflow-execution = { path = "./crates/stepflow-execution" }
 stepflow-mock = { path = "./crates/stepflow-mock" }
+stepflow-observability = { path = "./crates/stepflow-observability" }
 stepflow-plugin = { path = "./crates/stepflow-plugin" }
 stepflow-protocol = { path = "./crates/stepflow-protocol" }
 stepflow-server = { path = "./crates/stepflow-server" }
