--- a/stepflow-rs/deny.toml
+++ b/stepflow-rs/deny.toml
@@ -106,7 +106,7 @@ allow = [
     "BSL-1.0",                         # OSI approved
     "Zlib",                            # OSI approved
     "CDLA-Permissive-2.0",
-
+    "MPL-2.0",
 ]
 # The confidence threshold for detecting a license from license text.
 # The higher the value, the more closely the license text must be to the
