feat: migrate from tracing to log + fastrace observability
Migrates the entire codebase from the `tracing` crate to the new dual
observability system using `log` for structured logging and `fastrace`
for distributed tracing.

**Removed dependencies:**
- `tracing` - Replaced with `log` crate
- `tracing-subscriber` - Replaced with `logforth` via stepflow-observability
- `tracing-error` - No longer needed

**Key changes:**

1. **Logging migration** (`tracing::` → `log::`)
   - All `tracing::info!`, `tracing::debug!`, etc. replaced with `log::` equivalents
   - Structured logging using standard `log` macros
   - Automatic trace context injection (trace_id, span_id) via stepflow-observability

2. **Tracing migration** (`tracing::instrument` → `fastrace::trace`)
   - High-level operations now use `#[trace]` attribute or `LocalSpan::enter_with_local_parent()`
   - Zero-cost abstraction when tracing is disabled
   - Focus on user-facing execution structure rather than low-level debugging

3. **Workflow execution context** (stepflow-execution)
   - Added `RunIdGuard` to set run_id for entire workflow execution
   - Added `StepIdGuard` for per-step diagnostic context
   - All logs within a workflow now include run_id and step_id automatically

4. **Binary initialization** (stepflow-cli, stepflow-server, stepflow-load-balancer)
   - Updated to use `stepflow_observability::init_observability()`
   - Configured with `BinaryObservabilityConfig` to enable/disable run diagnostics
   - Simplified logging setup with flexible output formats and destinations

**stepflow-execution:**
- Workflow executor now sets run_id and step_id diagnostic context
- Added structured logging for workflow lifecycle events
- Uses fastrace LocalSpan for step execution spans

**stepflow-protocol:**
- Protocol communication now uses log for debugging
- HTTP and stdio clients migrated to new logging system
- Error handling maintains proper context with error-stack

**stepflow-plugin:**
- Plugin routing and e

--- a/stepflow-rs/crates/stepflow-builtins/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-builtins/Cargo.toml
@@ -28,7 +28,7 @@ stepflow-core.workspace = true
 stepflow-state.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
-tracing.workspace = true
+log.workspace = true
 trait-variant.workspace = true
 uuid.workspace = true
 
