--- a/stepflow-rs/crates/stepflow-cli/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-cli/Cargo.toml
@@ -40,9 +40,8 @@ similar.workspace = true
 nix.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
-tracing.workspace = true
-tracing-error.workspace = true
-tracing-subscriber.workspace = true
+log.workspace = true
+stepflow-observability.workspace = true
 url.workspace = true
 uuid.workspace = true
 strum.workspace = true
