--- a/stepflow-rs/crates/stepflow-mock/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-mock/Cargo.toml
@@ -20,7 +20,7 @@ error-stack.workspace = true
 serde.workspace = true
 stepflow-plugin.workspace = true
 stepflow-core.workspace = true
-tracing.workspace = true
+log.workspace = true
 
 [dev-dependencies]
 static_assertions.workspace = true
