--- a/stepflow-rs/crates/stepflow-observability/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-observability/Cargo.toml
@@ -13,6 +13,7 @@ logforth = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 error-stack = { workspace = true }
+clap = { workspace = true }
 
 [dev-dependencies]
 
