--- a/stepflow-rs/crates/stepflow-server/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-server/Cargo.toml
@@ -33,8 +33,8 @@ thiserror.workspace = true
 tokio.workspace = true
 tower-http.workspace = true
 tower.workspace = true
-tracing.workspace = true
-tracing-subscriber.workspace = true
+log.workspace = true
+stepflow-observability.workspace = true
 utoipa-axum.workspace = true
 utoipa-swagger-ui.workspace = true
 utoipa.workspace = true
@@ -43,7 +43,6 @@ uuid.workspace = true
 [dev-dependencies]
 stepflow-builtins.workspace = true
 stepflow-mock.workspace = true
-tracing-error.workspace = true
 tower.workspace = true
 
 [[bin]]
