--- a/stepflow-rs/crates/stepflow-state-sql/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-state-sql/Cargo.toml
@@ -26,7 +26,7 @@ sqlx.workspace = true
 stepflow-core.workspace = true
 stepflow-state.workspace = true
 tokio.workspace = true
-tracing.workspace = true
+log.workspace = true
 uuid.workspace = true
 
 [dev-dependencies]
