--- a/stepflow-rs/crates/stepflow-core/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-core/Cargo.toml
@@ -9,6 +9,9 @@ homepage.workspace = true
 repository.workspace = true
 publish = false
 
+[package.metadata.cargo-machete]
+ignored = ["safer_owning_ref"]
+
 [lints]
 workspace = true
 
