feat: Observability stack added as docker-compose, exporter for OTLP … (#390)
* feat: Observability stack added as docker-compose, exporter for OTLP added.

* fix: linting and clippy

--- a/stepflow-rs/crates/stepflow-observability/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-observability/Cargo.toml
@@ -8,12 +8,17 @@ repository.workspace = true
 
 [dependencies]
 fastrace = { workspace = true }
+fastrace-opentelemetry = { workspace = true }
 log = { workspace = true }
 logforth = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 error-stack = { workspace = true }
 clap = { workspace = true }
+opentelemetry = { workspace = true }
+opentelemetry-otlp = { workspace = true }
+opentelemetry_sdk = { workspace = true }
+opentelemetry-semantic-conventions = { workspace = true }
 
 [dev-dependencies]
 
