feat: OTLP logging support and observability improvements
Add support for exporting logs to OTLP endpoints alongside traces, with
improved lifecycle management and dependency updates.

- Add `log_destination` configuration option (stdout, file, otlp)
- Integrate logforth-append-opentelemetry for OTLP log export
- Add config validation to ensure consistent log/trace settings
- Require explicit `close()` call on ObservabilityGuard for proper flush
- Add `leak()` method for tests that don't need telemetry cleanup

- Add root span "flow_execution" for each workflow run
- Use run_id as trace ID (converted to 128-bit) for correlation
- Fix Send-safety by wrapping execute_workflow with .in_span()
- Make close() async with sleep to allow OTLP export to complete

- Upgrade OpenTelemetry crates: 0.26 → 0.31
- Upgrade fastrace-opentelemetry: 0.7 → 0.14
- Upgrade prost: 0.13 → 0.14
- Upgrade tonic: 0.12 → 0.14
- Upgrade axum dependencies
- Add tokio as regular dependency for async close

- Add STEPFLOW_LOG_DESTINATION environment variable
- Validate otlp_endpoint is set when using otlp destination or traces
- Validate log_file is set when using file destination
- Update examples and documentation for new configuration options

- Prevent race condition between OTLP flush and tokio runtime shutdown
- Fix compilation error with non-Send span guards in spawned tasks
- Update docker-compose port mappings (4317→14317) to avoid conflicts

This enables full observability with logs and traces flowing to OTLP
collectors like the included docker-compose stack (Jaeger + Loki + Grafana).

--- a/stepflow-rs/crates/stepflow-observability/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-observability/Cargo.toml
@@ -11,6 +11,7 @@ fastrace = { workspace = true }
 fastrace-opentelemetry = { workspace = true }
 log = { workspace = true }
 logforth = { workspace = true }
+logforth-append-opentelemetry = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 error-stack = { workspace = true }
@@ -19,8 +20,10 @@ opentelemetry = { workspace = true }
 opentelemetry-otlp = { workspace = true }
 opentelemetry_sdk = { workspace = true }
 opentelemetry-semantic-conventions = { workspace = true }
+tokio = { workspace = true }
 
 [dev-dependencies]
+tokio = { workspace = true }
 
 [[example]]
 name = "basic"
