--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -23,11 +23,12 @@ dynosaur = "0.2.0"
 erased-serde = "0.4.6"
 error-stack = { version = "0.5.0", features = ["serde"] }
 fastrace = { version = "0.7", features = ["enable"] }
-fastrace-opentelemetry = "0.7"
+fastrace-opentelemetry = "0.14"
 futures = "0.3.31"
 glob = "0.3"
 log = "0.4"
-logforth = { version = "0.28", features = ["layout-json", "layout-text", "bridge-log", "diagnostic-fastrace", "append-file"] }
+logforth = { version = "0.28", features = ["layout-json", "layout-text", "bridge-log", "diagnostic-fastrace", "append-file", "append-opentelemetry"] }
+logforth-append-opentelemetry = { version = "0.2.1" }
 matchit = "0.8.4"
 hex = "0.4"
 indexmap = { version = "2.8.0", features = ["serde"] }
@@ -36,11 +37,10 @@ insta-cmd = "0.6.0"
 itertools = "0.14"
 nix = { version = "0.29", features = ["process", "signal"] }
 openai-api-rs = { version = "6.0.6", features = ["rustls"], default-features = false }
-opentelemetry = { version = "0.26", features = ["trace", "logs"] }
-opentelemetry-otlp = { version = "0.26", features = ["trace", "logs"] }
-opentelemetry_sdk = { version = "0.26", features = ["rt-tokio", "trace", "logs"] }
-opentelemetry-appender-log = "0.26"
-opentelemetry-semantic-conventions = "0.26"
+opentelemetry = { version = "0.31", features = ["trace", "logs"] }
+opentelemetry-otlp = { version = "0.31", features = ["trace", "logs", "grpc-tonic", "zstd-tonic", ] }
+opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "trace", "logs"] }
+opentelemetry-semantic-conventions = "0.31"
 pingora = { version = "0.6", features = ["proxy"] }
 pingora-core = "0.6"
 pingora-http = "0.6"
