feat: end-to-end distributed tracing for component servers
Add comprehensive distributed tracing support across the Rust runtime and
component servers (Python SDK), enabling trace context propagation for
bidirectional calls and full observability of workflow execution.

This enables full distributed tracing for debugging workflow execution,
analyzing performance bottlenecks, and understanding cross-language
execution flows in production environments.

This closes #271 by adding component-server tracing.

**Key Features:**
- Full trace correlation across Rust ↔ Python boundaries
- Automatic parent-child span relationships for bidirectional calls
- Run-level and step-level tracing granularity
- Zero-configuration tracing when STEPFLOW_OTLP_ENDPOINT is set
- Compatible with standard OTLP backends (Jaeger, Tempo, etc.)

**Protocol Extensions:**
- Add ObservabilityContext to component execution protocol
- Include trace_id, span_id, run_id, flow_id, and step_id
- Propagate context through component_execute and bidirectional calls
- Update protocol schema and Python SDK generated types

**Rust Runtime (stepflow-protocol):**
- Extract observability context from active spans using fastrace
- Inject context into ComponentExecuteRequest messages
- Propagate context through blob and flow handler bidirectional calls
- Add observability module with context extraction utilities

**Python SDK:**
- Add opentelemetry dependencies (tracing and logging)
- Implement ObservabilityConfig for OTLP configuration
- Auto-setup OTLP exporters from environment variables
- Propagate trace context to Python component execution spans
- Support both STDIO and HTTP server transports
- Add context injection for bidirectional calls back to runtime

**Integration Testing:**
- Add testcontainers for automatic OTLP collector management
- Implement isolated test environment with temp directories
- Auto-detect Colima Docker socket for macOS compatibility
- Add TRACING_TESTS.md documentation with troublesho

--- a/sdks/python/pyproject.toml
+++ b/sdks/python/pyproject.toml
@@ -38,6 +38,9 @@ dependencies = [
     "msgspec>=0.19.0",
     "jsonschema>=4.17.0",
     "types-jsonschema>=4.17.0",
+    "opentelemetry-api>=1.20.0",
+    "opentelemetry-sdk>=1.20.0",
+    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
 ]
 
 [project.urls]
@@ -171,6 +174,12 @@ exclude = ["**/generated_*.py"]
 # types-* packages are type stubs for mypy and not directly imported
 ignore = ["DEP002"]
 extend_exclude = ["types-jsonschema"]
+
+# OpenTelemetry packages all provide the 'opentelemetry' module
+[tool.deptry.package_module_name_map]
+opentelemetry-api = "opentelemetry"
+opentelemetry-sdk = "opentelemetry"
+opentelemetry-exporter-otlp-proto-grpc = "opentelemetry"
 
 [tool.mypy]
 python_version = "3.11"
