--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -77,6 +77,7 @@ stepflow-state = { path = "./crates/stepflow-state" }
 stepflow-state-sql = { path = "./crates/stepflow-state-sql" }
 tempfile = "3.8"
 test-with = { version = "0.14.10", features = ["runtime"] }
+testcontainers = "0.23"
 thiserror = "2.0.12"
 tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "process", "sync", "io-util", "time"]}
 tokio-stream = { version = "0.1.17", features = ["io-util"] }
