--- a/stepflow-rs/crates/stepflow-observability/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-observability/Cargo.toml
@@ -23,7 +23,7 @@ opentelemetry-semantic-conventions = { workspace = true }
 tokio = { workspace = true }
 
 [dev-dependencies]
-tokio = { workspace = true }
+serde_json = { workspace = true }
 
 [[example]]
 name = "basic"
