--- a/stepflow-rs/crates/stepflow-server/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-server/Cargo.toml
@@ -44,6 +44,7 @@ uuid.workspace = true
 stepflow-builtins.workspace = true
 stepflow-mock.workspace = true
 tower.workspace = true
+testcontainers.workspace = true
 
 [[bin]]
 name = "stepflow-server"
