--- a/docker/observability/docker-compose.yml
+++ b/docker/observability/docker-compose.yml
@@ -17,8 +17,8 @@ services:
     volumes:
       - ./otel-collector/config.yaml:/etc/otel-collector-config.yaml
     ports:
-      - "14317:4317"  # OTLP gRPC receiver (remapped to avoid common port conflicts)
-      - "14318:4318"  # OTLP HTTP receiver (remapped for consistency)
+      - "4317:4317"   # OTLP gRPC receiver
+      - "4318:4318"   # OTLP HTTP receiver
       - "8888:8888"   # Prometheus metrics (collector's own metrics)
       - "8889:8889"   # Prometheus exporter (application metrics)
     networks:
