--- a/stepflow-rs/crates/stepflow-protocol/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-protocol/Cargo.toml
@@ -25,6 +25,7 @@ serde.workspace = true
 stepflow-core.workspace = true
 stepflow-plugin.workspace = true
 subst.workspace = true
+strum.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tokio-stream.workspace = true
