feat: comprehensive distributed tracing integration tests
Refactors tracing integration tests from stepflow-server to stepflow-cli
with enhanced verification of traces, logs, and diagnostic context.

This closes #384.

Key improvements:
- Environment-based observability configuration (no in-process setup)
- Subprocess CLI execution using `stepflow run` command
- Comprehensive trace verification including Python SDK spans
- Log diagnostic context verification (run_id, trace_id, span_id)
- Strongly-typed OTLP trace and log parsing
- Python SDK tracing configuration via environment variables

Test coverage:
- Simple workflow: builtin components, flat trace hierarchy
- Bidirectional workflow: Python UDF with context.get_blob/put_blob calls,
  nested component execution spans, cross-process trace propagation

Verification includes:
- Flow execution root spans with trace_id == run_id
- Step execution spans as children of flow execution
- Python component execution spans with bidirectional call spans
- JSON logs with diagnostic context (run_id, trace_id, span_id, flow_id,
step_id)
- Trace context propagation across Rust ↔ Python boundaries

Tests use Docker-based OTLP collector with JSONL export for verification.

--- a/stepflow-rs/crates/stepflow-cli/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-cli/Cargo.toml
@@ -53,6 +53,7 @@ insta.workspace = true
 insta-cmd.workspace = true
 regex.workspace = true
 tempfile.workspace = true
+testcontainers.workspace = true
 
 [[bin]]
 name = "stepflow"
