--- a/stepflow-rs/crates/stepflow-builtins/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-builtins/Cargo.toml
@@ -25,6 +25,7 @@ serde_json.workspace = true
 serde_yaml_ng.workspace = true
 stepflow-plugin.workspace = true
 stepflow-core.workspace = true
+stepflow-observability.workspace = true
 stepflow-state.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
