--- a/stepflow-rs/crates/stepflow-components-mcp/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-components-mcp/Cargo.toml
@@ -43,3 +43,4 @@ subst.workspace = true
 stepflow-state.workspace = true
 futures.workspace = true
 uuid.workspace = true
+fastrace.workspace = true
