--- a/docker/observability/grafana/provisioning/datasources/datasources.yaml
+++ b/docker/observability/grafana/provisioning/datasources/datasources.yaml
@@ -9,6 +9,7 @@ datasources:
   # Prometheus datasource for metrics
   - name: Prometheus
     type: prometheus
+    uid: prometheus
     access: proxy
     url: http://prometheus:9090
     isDefault: true
@@ -24,6 +25,7 @@ datasources:
   # Loki datasource for logs
   - name: Loki
     type: loki
+    uid: loki
     access: proxy
     url: http://loki:3100
     editable: true
