--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -37,9 +37,9 @@ insta-cmd = "0.6.0"
 itertools = "0.14"
 nix = { version = "0.29", features = ["process", "signal"] }
 openai-api-rs = { version = "6.0.6", features = ["rustls"], default-features = false }
-opentelemetry = { version = "0.31", features = ["trace", "logs"] }
-opentelemetry-otlp = { version = "0.31", features = ["trace", "logs", "grpc-tonic", "zstd-tonic" ] }
-opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "trace", "logs"] }
+opentelemetry = { version = "0.31", features = ["trace", "logs", "metrics"] }
+opentelemetry-otlp = { version = "0.31", features = ["trace", "logs", "metrics", "grpc-tonic", "zstd-tonic" ] }
+opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "trace", "logs", "metrics"] }
 opentelemetry-semantic-conventions = "0.31"
 pingora = { version = "0.6", features = ["proxy"] }
 pingora-core = "0.6"
