feat: Partially addresses #407 by adding http integration with langflow and increasing pipe buffer sizes where possible

--- a/stepflow-rs/crates/stepflow-protocol/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-protocol/Cargo.toml
@@ -17,6 +17,7 @@ error-stack.workspace = true
 fastrace.workspace = true
 futures.workspace = true
 indexmap.workspace = true
+libc = "0.2"
 reqwest.workspace = true
 reqwest-eventsource.workspace = true
 schemars.workspace = true
