test: add comprehensive must_execute + skip_if interaction tests
Add thorough testing for the interaction between must_execute and skip_if
fields to ensure correct dependency tracking and execution behavior.

Unit tests (stepflow-analysis/src/dependency.rs):
1. test_must_execute_with_skip_if_requires_condition_inputs
   - Verifies inputs to skip_if conditions are required
   - Tests that skip_if condition step must complete before must_execute step

2. test_must_execute_skip_if_false_requires_step_inputs
   - Verifies must_execute step inputs are included in required_steps
   - Tests conservative dependency analysis (doesn't evaluate skip_if statically)

3. test_must_execute_skip_if_true_does_not_require_step_inputs
   - Documents that analysis conservatively includes dependencies
   - Executor handles actual skip_if evaluation at runtime

End-to-end integration test (tests/mock/must_execute_skip_if.yaml):
- Test case 1: skipIf=true → step skipped, workflow succeeds
- Test case 2: skipIf=false → step executes and fails workflow
- Test case 3: Verifies input dependencies are properly tracked

These tests validate:
- Skip_if condition dependencies are required for must_execute steps
- Must_execute steps and their dependencies are conservatively included
- Runtime skip_if evaluation works correctly with must_execute
- Actual execution honors skip_if even when must_execute is true

--- a/tests/mock/stepflow-config.yml
+++ b/tests/mock/stepflow-config.yml
@@ -20,6 +20,9 @@ plugins:
           { input: "hello" }:
             outcome: success
             result: {output: world}
+          { input: "b" }:
+            outcome: success
+            result: {output: b}
       /two_outputs:
         input_schema:
           type: object
