feat: add mode-aware skip conditions for vector store workflows
Implement sophisticated mode-aware execution for vector store workflows that
allows fine-grained control over which steps execute in different modes
(ingest, retrieve, hybrid). This enables efficient workflow execution by
skipping unnecessary operations based on the execution context.

Key technical features:
- Mode-aware skip conditions using computational components (mode_check,
  mode_output) instead of expression evaluation
- Graph-based node classification algorithm that analyzes dependency
  relationships to determine if steps are part of ingestion or retrieval paths
- Propagation of classification from classified nodes to unclassified
  dependencies (e.g., embeddings feeding into vector stores)
- Graceful handling of skipped steps using OnSkipDefault for dependent steps
- MustExecute flag combined with default values for always-running output steps

Implementation details:
- Added mode_check component that returns boolean skip flags (skip_ingest_step,
  skip_retrieve_step) based on the execution mode
- Added mode_output component that provides appropriate feedback messages when
  retrieval is skipped in ingest-only mode
- Created _classify_nodes_for_mode_skipping() method in translator.py that uses
  graph traversal to identify ingestion vs retrieval steps
- Updated node_processor.py to apply skip conditions based on classification
- Enhanced vector store execution to support mode-aware output selection

Design decisions:
- Use computational approach (mode_check component) rather than expression
  evaluation since Stepflow's skipIf only accepts references to boolean values
- Iterate over all nodes during classification propagation, not just nodes with
  dependencies, to handle components like embeddings with no incoming edges
- Apply OnSkipDefault to retrieval_result input of mode_output step to allow
  execution even when retrieval is skipped
- Set mustExecute=True on all Langflow-converted step

--- a/integrations/langflow/pyproject.toml
+++ b/integrations/langflow/pyproject.toml
@@ -75,6 +75,8 @@ dev = [
     "requests>=2.31.0", # For Stepflow server health checks in tests
     "black>=25.1.0",
     "psutil>=5.9.0", # For memory monitoring in OOM tests
+    "testcontainers[opensearch]>=4.0.0", # For OpenSearch integration tests
+    "opensearch-py>=2.0.0", # OpenSearch Python client
 ]
 
 [project.urls]
@@ -176,6 +178,7 @@ python-dotenv = ["dotenv"]
 pyyaml = ["yaml"]
 langflow-nightly = ["langflow"]
 lfx-nightly = ["lfx"]
+opensearch-py = ["opensearchpy"]
 
 [tool.mypy]
 python_version = "3.11"
