--- a/integrations/langflow/pyproject.toml
+++ b/integrations/langflow/pyproject.toml
@@ -42,8 +42,6 @@ dependencies = [
     "click>=8.0",
     "jsonschema>=4.17.0",
     "pydantic>=2.0.0", # For BaseModel serialization and SecretStr handling
-    "langflow-nightly==1.6.4.dev5", # Update to 1.6.5 when available
-    "lfx-nightly==0.1.12.dev39",    # Update to match langflow
     "pandas>=2.0.0", # For DataFrame serialization and deserialization
     "python-dotenv>=1.0.0", # For .env file support
     "openai>=1.0.0", # For OpenAI API integration
@@ -57,6 +55,10 @@ http = [
     "fastapi>=0.104.0",
     "uvicorn[standard]>=0.24.0",
     "sse-starlette>=1.6.5",
+]
+langflow = [
+    "langflow-nightly==1.6.4.dev5",  # Langflow runtime - provided by base image in Docker
+    "lfx-nightly==0.1.12.dev39",     # LFX runtime - provided by base image in Docker
 ]
 
 [dependency-groups]
