--- a/integrations/langflow/pyproject.toml
+++ b/integrations/langflow/pyproject.toml
@@ -50,6 +50,7 @@ dependencies = [
     "langchain_core>=0.1.0", # For core LangChain functionality
     "langchain_openai>=0.1.0", # For LangChain OpenAI integration
     "nest-asyncio>=1.6.0",
+    "opensearch-py>=2.8.0", # Still needed after weird hack removed?
 ]
 
 
