--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -35,6 +35,7 @@ indexmap = { version = "2.8.0", features = ["serde"] }
 insta = { version = "1.34.0", features = ["glob", "yaml", "filters" ] }
 insta-cmd = "0.6.0"
 itertools = "0.14"
+json-patch = "3.0.1"
 nix = { version = "0.29", features = ["process", "signal"] }
 openai-api-rs = { version = "6.0.6", features = ["rustls"], default-features = false }
 opentelemetry = { version = "0.31", features = ["trace", "logs", "metrics"] }
