--- a/stepflow-rs/crates/stepflow-core/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-core/Cargo.toml
@@ -23,6 +23,7 @@ async-trait.workspace = true
 error-stack.workspace = true
 hex.workspace = true
 indexmap.workspace = true
+json-patch.workspace = true
 safer_owning_ref.workspace = true
 schemars.workspace = true
 serde_json.workspace = true
