--- a/stepflow-rs/crates/stepflow-core/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-core/Cargo.toml
@@ -30,6 +30,7 @@ serde_json.workspace = true
 serde_yaml_ng.workspace = true
 serde.workspace = true
 sha2.workspace = true
+stepflow-observability.workspace = true
 thiserror.workspace = true
 log.workspace = true
 utoipa.workspace = true
