--- a/stepflow-rs/crates/stepflow-observability/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-observability/Cargo.toml
@@ -1,10 +1,18 @@
 [package]
 name = "stepflow-observability"
 version.workspace = true
+authors.workspace = true
 edition.workspace = true
 license.workspace = true
 homepage.workspace = true
 repository.workspace = true
+publish = false
+
+[lints]
+workspace = true
+
+[lib]
+doctest = false
 
 [dependencies]
 fastrace = { workspace = true }
